make new password

--- a/app/partials/passwordList.html
+++ b/app/partials/passwordList.html
@@ -3,3 +3,4 @@
 		<a ng-href="#/password/{{password.id}}">{{password.id}}</a>
 	</li>
 </ul>
+<button ng-click="makeNew()">Create New Password</button>
