--- a/app/partials/passwordList.html
+++ b/app/partials/passwordList.html
@@ -1,6 +1,26 @@
-<ul>
-	<li ng-repeat="password in passwords">
-		<a ng-href="#/password/{{password.id}}">{{password.id}}</a>
-	</li>
-</ul>
-<button ng-click="makeNew()">Create New Password</button>
+<div class="row-fluid">
+	<div class="span4">
+		<ul>
+			<li ng-repeat="password in passwords">
+				<a ng-href="#/p/{{password.id}}">{{password.id}}</a>
+			</li>
+		</ul>
+		<button ng-click="makeNew()">Create New Password</button>
+	</div>
+	<div class="span8">
+		<div ui-if="selectedId.length">
+			<tabs>
+				<pane heading="Passwerd">
+					<input type="text" ng-model="passwords[selectedId].password" ui-event="{'blur': 'password.$save();'}">
+				</pane>
+				<pane heading="Log">
+					<ul>
+						<li>read by Joe 5 min ago</li>
+						<li>read by Frances 5 min ago</li>
+						<li>updated by Paul 6 days ago</li>
+					</ul>
+				</pane>
+			</tabs>
+		</div>
+	</div>
+</div>
