--- a/app/partials/passwordList.html
+++ b/app/partials/passwordList.html
@@ -11,7 +11,7 @@
 		<div ui-if="selectedId.length">
 			<tabs>
 				<pane heading="Passwerd">
-					<input type="text" ng-model="passwords[selectedId].password" ui-event="{'blur': 'password.$save();'}">
+					<input type="text" ng-model="passwords[selectedId].password" ui-event="{'blur': 'passwords[selectedId].$save();'}">
 				</pane>
 				<pane heading="Log">
 					<ul>
