--- a/app/partials/passwordList.html
+++ b/app/partials/passwordList.html
@@ -2,16 +2,18 @@
 	<div class="span4">
 		<ul>
 			<li ng-repeat="password in passwords">
-				<a ng-href="#/p/{{password.id}}">{{password.id}}</a>
+				<a href="" ng-click="select(password)">{{password.id}}</a>
 			</li>
 		</ul>
 		<button ng-click="makeNew()">Create New Password</button>
 	</div>
 	<div class="span8">
-		<div ui-if="selectedId.length">
+		<div ui-if="selected">
 			<tabs>
-				<pane heading="Passwerd">
-					<input type="text" ng-model="passwords[selectedId].password" ui-event="{'blur': 'passwords[selectedId].$save();'}">
+				<pane heading="Password">
+					<input type="text" ng-model="selected.password" ui-event="{'blur': 'selected.$save();'}">
+					<input type="text" ng-model="selected.title" ui-event="{'blur': 'selected.$save();'}">
+					<input type="textarea" ng-model="selected.description" ui-event="{'blur': 'selected.$save();'}">
 				</pane>
 				<pane heading="Log">
 					<ul>
