delete added grunt less

--- a/app/partials/Password.html
+++ b/app/partials/Password.html
@@ -3,6 +3,7 @@
 		<ul>
 			<li ng-repeat="password in passwords">
 				<a href="" ng-click="select(password)">{{password.title}}</a>
+				<button ng-click="remove(password)">delete</button>
 			</li>
 		</ul>
 		<button ng-click="makeNew()">Create New Password</button>
