delete user and group

--- a/app/partials/Password.html
+++ b/app/partials/Password.html
@@ -1,9 +1,12 @@
 <div class="row-fluid">
 	<div class="span4">
 		<ul>
-			<li ng-repeat="password in passwords">
+			<li ng-repeat="password in passwords"
+				ui-event="{'mouseenter': 'removeVisible=true;', 'mouseleave': 'removeVisible=false;'}">
 				<a href="" ng-click="select(password)">{{password.title}}</a>
-				<button ng-click="remove(password)">delete</button>
+				<i class="icon-remove"
+					ng-show="removeVisible"
+					ng-click="remove(password);"></i>
 			</li>
 		</ul>
 		<button ng-click="makeNew()">Create New Password</button>
