--- a/app/partials/Group.html
+++ b/app/partials/Group.html
@@ -1,8 +1,12 @@
 <div class="row-fluid">
 	<div class="span4">
 		<ul>
-			<li ng-repeat="group in groups">
+			<li ng-repeat="group in groups"
+				ui-event="{'mouseenter': 'removeVisible=true;', 'mouseleave': 'removeVisible=false;'}">
 				<a href="" ng-click="select(group)">{{group.name}}</a>
+				<i class="icon-remove"
+					ng-show="removeVisible"
+					ng-click="remove(group);"></i>
 			</li>
 		</ul>
 		<button ng-click="makeNew()">Create New Group</button>
