editing password permissions

--- a/app/partials/Password.html
+++ b/app/partials/Password.html
@@ -51,6 +51,23 @@
 						</div>
 					</form>
 				</pane>
+				<pane heading="Permissions">
+					<div class="row-fluid">
+						<div class="span4">
+							<div ng-repeat="permission in selected.permissions">
+								{{permission.party.name}}
+								<input type="checkbox" ng-model="permission.canWrite">Write</input>
+								<input type="checkbox" ng-model="permission.canRead">Read</input>
+							</div>
+						</div>
+						<ul class="span4">
+							<li ng-repeat="group in allGroups | filter:isSelected:group">
+								<a href="" ng-click="addPermission(group)">{{group.name}}</a>
+							</li>
+						</ul>
+
+					</div>
+				</pane>
 				<pane heading="Log">
 					<ul>
 						<li>read by Joe 5 min ago</li>
