start of edit perm

--- a/app/partials/Password.html
+++ b/app/partials/Password.html
@@ -53,13 +53,18 @@
 				</pane>
 				<pane heading="Permissions">
 					<div class="row-fluid">
-						<div class="span4">
-							<div ng-repeat="permission in selected.permissions">
-								{{permission.party.name}}
-								<input type="checkbox" ng-model="permission.canWrite">Write</input>
-								<input type="checkbox" ng-model="permission.canRead">Read</input>
-							</div>
-						</div>
+						<table class="span4">
+							<tr>
+								<th></th>
+								<th>Write</th>
+								<th>Read</th>
+							</tr>
+							<tr ng-repeat="permission in selected.permissions">
+								<th>{{permission.party.name}}</th>
+								<th><input type="checkbox" ng-model="permission.canWrite" /></th>
+								<th><input type="checkbox" ng-model="permission.canRead" /></th>
+							</tr>
+						</table>
 						<ul class="span4">
 							<li ng-repeat="group in allGroups | filter:isSelected:group">
 								<a href="" ng-click="addPermission(group)">{{group.name}}</a>
