--- a/app/partials/Password.html
+++ b/app/partials/Password.html
@@ -60,13 +60,18 @@
 								<th>Read</th>
 							</tr>
 							<tr ng-repeat="permission in selected.permissions">
-								<th>{{permission.party.name}}</th>
-								<th><input type="checkbox" ng-model="permission.canWrite" /></th>
-								<th><input type="checkbox" ng-model="permission.canRead" /></th>
+								<td>{{permission.party.name}}</td>
+								<td><input type="checkbox" ng-model="permission.canWrite" /></td>
+								<td>
+									<i class="icon-remove"
+										ng-click="removePermission(permission);"></i>
+									<button class="icon-remove"
+										ng-click="removePermission(permission);"></button>
+								</td>
 							</tr>
 						</table>
 						<ul class="span4">
-							<li ng-repeat="group in allGroups | filter:isSelected:group">
+							<li ng-repeat="group in allGroups | filter:passwordPermissionsHaveGroup:group">
 								<a href="" ng-click="addPermission(group)">{{group.name}}</a>
 							</li>
 						</ul>
