password permission style

--- a/app/partials/Password.html
+++ b/app/partials/Password.html
@@ -53,28 +53,26 @@
 				</pane>
 				<pane heading="Permissions">
 					<div class="row-fluid">
-						<table class="span4">
-							<tr>
-								<th></th>
-								<th>Write</th>
-								<th>Read</th>
-							</tr>
-							<tr ng-repeat="permission in selected.permissions">
-								<td>{{permission.party.name}}</td>
-								<td><input type="checkbox" ng-model="permission.canWrite" /></td>
-								<td>
+						<div class="span4">
+							<h4>Access Rights</h4>
+							<ul>
+								<li ng-repeat="permission in selected.permissions"
+									ui-event="{'mouseenter': 'removeVisible=true;', 'mouseleave': 'removeVisible=false;'}">
+									<input type="checkbox" ng-model="permission.canWrite">{{permission.party.name}}</input>
 									<i class="icon-remove"
-										ng-click="removePermission(permission);"></i>
-									<button class="icon-remove"
-										ng-click="removePermission(permission);"></button>
-								</td>
-							</tr>
-						</table>
-						<ul class="span4">
-							<li ng-repeat="group in allGroups | filter:passwordPermissionsHaveGroup:group">
-								<a href="" ng-click="addPermission(group)">{{group.name}}</a>
-							</li>
-						</ul>
+											ng-show="removeVisible"
+											ng-click="removePermission(permission);"></i>
+								</li>
+							</ul>
+						</div>
+						<div class="span4">
+							<h4>Grant Access</h4>
+							<ul>
+								<li ng-repeat="group in allGroups | filter:passwordPermissionsHaveGroup:group">
+									<a href="" ng-click="addPermission(group)">{{group.name}}</a>
+								</li>
+							</ul>
+						</div>
 
 					</div>
 				</pane>
