persist the selected id by url

--- a/app/partials/Password.html
+++ b/app/partials/Password.html
@@ -3,7 +3,7 @@
 		<ul>
 			<li ng-repeat="password in passwords"
 				ui-event="{'mouseenter': 'removeVisible=true;', 'mouseleave': 'removeVisible=false;'}">
-				<a href="" ng-click="select(password)">{{password.title}}</a>
+				<a ng-href="#/p?id={{password.id}}" ng-click="select(password)">{{password.title}}</a>
 				<i class="icon-remove"
 					ng-show="removeVisible"
 					ng-click="remove(password);"></i>
