--- a/app/partials/Password.html
+++ b/app/partials/Password.html
@@ -58,7 +58,9 @@
 							<ul>
 								<li ng-repeat="permission in selected.permissions"
 									ui-event="{'mouseenter': 'removeVisible=true;', 'mouseleave': 'removeVisible=false;'}">
-									<input type="checkbox" ng-model="permission.canWrite">{{permission.party.name}}</input>
+									<input type="checkbox"
+										ng-model="permission.canWrite"
+										ng-change="savePermission(permission);">{{permission.party.name}}</input>
 									<i class="icon-remove"
 											ng-show="removeVisible"
 											ng-click="removePermission(permission);"></i>
