--- a/app/partials/Password.html
+++ b/app/partials/Password.html
@@ -52,7 +52,56 @@
 					</form>
 				</pane>
 				<pane heading="Permissions">
-					<div class="row-fluid">
+					<tabs>
+						<pane heading="Read Access">
+							<div class="row-fluid">
+								<div class="span4">
+									<h4>Have Read Access</h4>
+									<ul>
+										<li ng-repeat="permission in selected.permissions"
+											is-hovered>
+											{{permission.party.name}}
+											<a ng-show="isHovered"
+													ng-click="removePermission(permission);">Remove Access</a>
+										</li>
+									</ul>
+								</div>
+								<div class="span4">
+									<h4>Dont Have Access</h4>
+									<ul>
+										<li ng-repeat="party in allGroups | filter:passwordPermissionsHaveGroup:party"
+											is-hovered>
+											{{party.name}}
+											<a ng-show="isHovered"
+													ng-click="addPermission(party)">Grant Access</a>
+										</li>
+									</ul>
+								</div>
+							</div>
+						</pane>
+						<pane heading="write Access">
+							<div class="span4">
+								<h4>Have Write Access</h4>
+								<ul>
+									<li ng-repeat="permission in selected.permissions | filter:permission.canWrite"
+										is-hovered>{{permission.party.name}}
+										<a ng-show="isHovered"
+											ng-click="permission.canWrite=false; savePermission(password);">Remove Write Access</a>
+									</li>
+								</ul>
+							</div>
+							<div class="span4">
+								<h4>Dont Have Write Access</h4>
+									<li ng-repeat="permission in selected.permissions | filter:!permission.canWrite"
+										is-hovered>{{permission.party.name}}
+										<a ng-show="isHovered"
+											ng-click="permission.canWrite=true; savePermission(password);">Grant Write Access</a>
+									</li>
+								</h4>
+							</div>
+						</pane>
+					</tabs>
+					<!-- <div class="row-fluid">
 						<div class="span4">
 							<h4>Access Rights</h4>
 							<ul>
@@ -76,7 +125,7 @@
 							</ul>
 						</div>
 
-					</div>
+					</div> -->
 				</pane>
 				<pane heading="Log">
 					<ul>
