--- a/app/partials/Group.html
+++ b/app/partials/Group.html
@@ -10,7 +10,7 @@
 					ng-click="remove(group);"></i>
 			</li>
 		</ul>
-		<button ng-click="makeNew()">Create New Group</button>
+		<button class="btn" ng-click="makeNew()">Create New Group</button>
 	</div>
 	<div class="span8">
 		<div ui-if="selected">
