--- a/app/partials/Account.html
+++ b/app/partials/Account.html
@@ -9,7 +9,7 @@
 					ng-click="remove(account);"></i>
 			</li>
 		</ul>
-		<button ng-click="makeNew()">Create New Account</button>
+		<button class="btn" ng-click="makeNew()">Create New Account</button>
 	</div>
 	<div class="span8">
 		<div ui-if="selected">
