--- a/app/partials/User.html
+++ b/app/partials/User.html
@@ -9,7 +9,7 @@
 					ng-click="remove(user);"></i>
 			</li>
 		</ul>
-		<button ng-click="makeNew()">Create New User</button>
+		<button class="btn" ng-click="makeNew()">Create New User</button>
 	</div>
 	<div class="span8">
 		<div ui-if="selected">
