change rest path from /play to /api

--- a/app/partials/Account.html
+++ b/app/partials/Account.html
@@ -43,7 +43,7 @@
 							<label class="control-label"
 								for="inputPassword">Password</label>
 							<div class="controls">
-								<div secret src="/play/accounts/{{selected.id}}/password"></div>
+								<div secret src="/api/accounts/{{selected.id}}/password"></div>
 							</div>
 						</div>
 
