Refactored Account and Group use rich list

--- a/app/partials/Account.html
+++ b/app/partials/Account.html
@@ -7,13 +7,13 @@
 					<form class="form-horizontal">
 						<div class="control-group">
 							<label class="control-label"
-								for="inputTitle">Title</label>
+								for="inputName">Name</label>
 							<div class="controls">
 								<input type="text"
 									class="input-block-level"
-									placeholder="Title"
-									id="inputTitle"
-									ng-model="selected.title"
+									placeholder="Name"
+									id="inputName"
+									ng-model="selected.name"
 									ui-event="{'blur': 'selected.$save();'}" />
 							</div>
 						</div>
