--- a/app/partials/User.html
+++ b/app/partials/User.html
@@ -1,16 +1,5 @@
 <div class="row-fluid">
-	<div class="span4">
-		<ul>
-			<li ng-repeat="user in users"
-				ui-event="{'mouseenter': 'removeVisible=true;', 'mouseleave': 'removeVisible=false;'}">
-				<a href="" ng-click="select(user)">{{user.name}}</a>
-				<i class="icon-remove"
-					ng-show="removeVisible"
-					ng-click="remove(user);"></i>
-			</li>
-		</ul>
-		<button class="btn" ng-click="makeNew()">Create New User</button>
-	</div>
+	<div rich-list="users" />
 	<div class="span8">
 		<div ui-if="selected">
 			<tabs>
