Added Delete buttons for Account,User,Group

--- a/app/partials/Account.html
+++ b/app/partials/Account.html
@@ -51,6 +51,7 @@
 									ui-event="{'blur': 'selected.$save();'}" />
 							</div>
 						</div>
+						<button class="btn" ng-click="remove(selected)">Delete</button>
 					</form>
 				</pane>
 				<pane heading="Permissions">
