--- a/app/partials/Group.html
+++ b/app/partials/Group.html
@@ -7,6 +7,7 @@
 					<input type="text"
 						ng-model="selected.name"
 						ui-event="{'blur': 'selected.$save();'}" />
+					<button class="btn" ng-click="remove(selected)">Delete</button>
 
 					<h3>Users</h3>
 					<div class="row-fluid">
