--- a/app/partials/User.html
+++ b/app/partials/User.html
@@ -7,6 +7,7 @@
 					<input type="text"
 						ng-model="selected.name"
 						ui-event="{'blur': 'selected.$save();'}" />
+					<button class="btn" ng-click="remove(selected)">Delete</button>
 				</pane>
 				<pane heading="Log">
 					<ul>
